--- a/login.html
+++ b/login.html
@@ -7,7 +7,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <link rel="icon" href="../../../../favicon.ico">
-    <title>Starter Template · Bootstrap</title>
+    <title>Login</title>
   
 
 
@@ -35,7 +35,7 @@
              <div class="col-md-6">  
                  <div class="h-100 d-flex justify-content-center align-items-center">  
                      <div class="py-4 px-3"> 
-         <h4>Employee SignIn</h4>   <br>
+         <h4>Employee Sign In</h4>   <br>
                          <div class="row g-2 mt-1"> <div class="col-md-12"> <div class="input-field"> 
          <input class="form-control" id="input1" required>  
          <label for="input1">User-Name</label> </div> </div>  
@@ -52,7 +52,7 @@
                          
          <span class="">Please sign in to continue</span>  
                          <div class="row mt-2"> <div class="col-md-12">  
-                             <button class="btn btn-primary w-100 signup-button" >Log-In</button> </div>   
+                             <a href="http://127.0.0.1:5500/EmployeeMain/EmpMain.html"><button class="test1">Log-In</a></button> </div>   
                               
                              <div class="form-check"><br>
         <input class="form-check-input" type="checkbox" value="" id="form2Example31" checked /> 
